# badge-dragonjar-firmware

.github/workflows/: build.yml
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt
firmware/main/apps/badge_link/: deauthalizer_module.c
firmware/main/include/: deauthalizer_module.h  menus.h
